--- a/Engine/ColorVision.Engine/Archive/ArchivePage.xaml
+++ b/Engine/ColorVision.Engine/Archive/ArchivePage.xaml
@@ -87,7 +87,7 @@
                             </GridViewColumn>
                             <GridViewColumn  Header="归档" Width="100">
                                 <GridViewColumn.CellTemplate>
-                                    <DataTemplate DataType="{x:Type local:ViewBatchResult}">
+                                    <DataTemplate DataType="{x:Type local:ArchivedMasterModel}">
                                         <Grid>
                                             <Button Content="保存" Click="Save_Click"  Tag="{Binding .}"/>
                                         </Grid>
