--- a/Engine/ColorVision.Engine/Dao/MeasureBatchManagerPage.xaml
+++ b/Engine/ColorVision.Engine/Dao/MeasureBatchManagerPage.xaml
@@ -1,30 +1,53 @@
-﻿<Page x:Class="ColorVision.Engine.Archive.Dao.DataSummaryPage"
+﻿<Page x:Class="ColorVision.Engine.MeasureBatchManagerPage"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:ColorVision.Engine.Archive.Dao"
+             xmlns:local="clr-namespace:ColorVision.Engine"
+             d:DataContext="{d:DesignInstance local:MeasureBatchManager}"
              mc:Ignorable="d" 
-             Title="综合查询"  d:DesignHeight="450" d:DesignWidth="800" Loaded="Page_Loaded" Initialized="UserControl_Initialized">
+             Title="综合查询"  d:DesignHeight="450" Background="{DynamicResource SecondaryRegionBrush}" d:DesignWidth="800" Loaded="Page_Loaded" Initialized="UserControl_Initialized">
     <Page.Resources>
         <Style TargetType="TextBlock" >
             <Setter Property="Foreground" Value="{DynamicResource GlobalTextBrush}" />
         </Style>
     </Page.Resources>
     <Grid>
-        <Border Background="{DynamicResource  SecondaryRegionBrush}" BorderBrush="{DynamicResource BorderBrush}" CornerRadius="5" Margin="5"/>
-        <Grid  >
+        <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
-            <Grid>
-                <DockPanel Margin="5" >
-                    <Button  Content="全部归档" DockPanel.Dock="Right" Click="Save_Click" Margin="5,0,0,0"/>
-                    <Button  Content="高级搜索" DockPanel.Dock="Right" Click="AdvanceQuery_Click" Margin="5,0,0,0"/>
+            <Grid Margin="5">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="Auto"/>
+                </Grid.ColumnDefinitions>
+                <DockPanel>
+                    <Button  Content="高级搜索" DockPanel.Dock="Right" Command="{Binding GenericQueryCommand}"  Margin="5,0,0,0"/>
                     <Button  Content="搜索" DockPanel.Dock="Right" Click="Query_Click" Margin="5,0,0,0"/>
                     <TextBox x:Name="SearchBox" BorderBrush="{DynamicResource PrimaryBrush}" BorderThickness="0"  VerticalContentAlignment="Center"  VerticalAlignment="Center" Text="" TextChanged="SearchBox_TextChanged"  InputMethod.IsInputMethodEnabled="True"  KeyDown="KeyEnter"  />
                 </DockPanel>
+                <StackPanel Grid.Column="1" Orientation="Horizontal">
+                    <Button  Content="全部归档" DockPanel.Dock="Right" Click="Save_Click" Margin="5,0,0,0"/>
+                    <Button Command="{Binding Config.EditCommand}"  Padding="2" Height="30" Width="30"  Margin="5,0,0,0">
+                        <Button.Triggers>
+                            <EventTrigger RoutedEvent="Button.Click">
+                                <BeginStoryboard>
+                                    <Storyboard>
+                                        <DoubleAnimation Storyboard.TargetName="rotateTransform2" Storyboard.TargetProperty="Angle" From="0" To="360" Duration="0:0:0.5" FillBehavior="Stop"/>
+                                    </Storyboard>
+                                </BeginStoryboard>
+                            </EventTrigger>
+                        </Button.Triggers>
+                        <TextBlock Text="&#xE713;"  HorizontalAlignment="Center" FontFamily="Segoe MDL2 Assets" FontSize="18" Foreground="{DynamicResource GlobalTextBrush}"  RenderTransformOrigin="0.5,0.5">
+                            <TextBlock.RenderTransform>
+                                <RotateTransform x:Name="rotateTransform2" />
+                            </TextBlock.RenderTransform>
+                        </TextBlock>
+                    </Button>
+
+                </StackPanel>
             </Grid>
             <Border  Grid.Row="1"  CornerRadius="10" >
                 <ListView x:Name="listView1"  SelectionChanged="listView1_SelectionChanged" Background="Transparent" BorderThickness="0"    MouseDoubleClick="listView1_MouseDoubleClick" >
@@ -110,7 +133,7 @@
                                     <DataTemplate DataType="{x:Type local:ViewBatchResult}">
                                         <Grid>
                                             <TextBlock Text="{Binding MeasureBatchModel.ArchiveStatus}" Visibility="{Binding IshowArch,Converter={StaticResource bool2VisibilityConverter1}}"/>
-                                            <Button Content="归档" Click="Arch_Click" Visibility="{Binding IshowArch,Converter={StaticResource bool2VisibilityConverter}}" Tag="{Binding .}"/>
+                                            <Button Content="归档" Click="Arch_Click"  Tag="{Binding .}"/>
                                         </Grid>
                                     </DataTemplate>
                                 </GridViewColumn.CellTemplate>
