--- a/Engine/ColorVision.Engine/Templates/Flow/DisplayFlow.xaml
+++ b/Engine/ColorVision.Engine/Templates/Flow/DisplayFlow.xaml
@@ -7,7 +7,7 @@
              xmlns:properties="clr-namespace:ColorVision.Engine.Properties"
              d:DataContext="{d:DesignInstance local:FlowEngineManager}"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="300" Width="300" Initialized="UserControl_Initialized" >
+             d:DesignHeight="450" d:DesignWidth="300" Width="300" ContextMenu="{Binding ContextMenu}" Initialized="UserControl_Initialized" >
     <UserControl.Resources>
         <Style TargetType="{x:Type TextBlock}">
             <Setter Property="Foreground" Value="{DynamicResource GlobalTextBrush}"/>
