--- a/UI/ColorVision.ImageEditor/ImageView.xaml
+++ b/UI/ColorVision.ImageEditor/ImageView.xaml
@@ -14,6 +14,9 @@
              d:DataContext="{d:DesignInstance local:ImageView}"
              d:DesignHeight="600" d:DesignWidth="1000" Initialized="UserControl_Initialized" AllowDrop="True">
     <UserControl.Resources>
+        <Style TargetType="TextBlock">
+            <Setter Property="Foreground" Value="{DynamicResource GlobalTextBrush}"/>
+        </Style>
         <Style TargetType="TextBox" BasedOn="{StaticResource TextBox.Small}">
             <EventSetter Event="PreviewKeyDown" Handler="TextBox_PreviewKeyDown"/>
         </Style>
@@ -67,7 +70,7 @@
         <Grid x:Name="ImageContentGrid" Grid.Row="1" >
             <Grid Background="{StaticResource LargeGridLinesDrawingBrush}" Visibility="Collapsed"/>
 
-            <Grid x:Name="ImageGroupGrid" HorizontalAlignment="Right" Width="400"  Visibility="{Binding ElementName=PropertyIsChecked,Path=IsChecked,Converter={StaticResource bool2VisibilityConverter}}">
+            <Grid x:Name="ImageGroupGrid" HorizontalAlignment="Right" Width="400"  Visibility="{Binding Config.IsShowPropertyEdit,Converter={StaticResource bool2VisibilityConverter}}">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="*"/>
                     <RowDefinition Height="300"/>
@@ -273,7 +276,7 @@
                     <Border Grid.Column="1" Background="{DynamicResource GlobalBorderBrush}" BorderBrush="{DynamicResource BorderBrush}" BorderThickness="1"  Margin="0,5" CornerRadius="5">
                         <StackPanel Margin="5">
                             <DockPanel Margin="0,0,0,5">
-                                <ui:ToggleSwitch x:Name="PropertyIsChecked"  DockPanel.Dock="Right" IsChecked="False"/>
+                                <ui:ToggleSwitch  DockPanel.Dock="Right" IsChecked="{Binding Config.IsShowPropertyEdit}"/>
                                 <TextBlock Text="显示编辑属性" Width="100" HorizontalAlignment="Left"/>
                             </DockPanel>
                             <DockPanel Margin="0,0,0,5">
