--- a/Engine/ColorVision.Engine/Messages/MessagesListWindow.xaml
+++ b/Engine/ColorVision.Engine/Messages/MessagesListWindow.xaml
@@ -6,6 +6,7 @@
         xmlns:local="clr-namespace:ColorVision.Engine.Messages"
         xmlns:properties="clr-namespace:ColorVision.Engine.Properties"
         mc:Ignorable="d"
+        d:DataContext="{d:DesignInstance local:MsgRecordManager}"
         Title="{x:Static properties:Resources.MsgLogWindow}" Height="600" Background="{StaticResource GlobalBackground}" Width="1200" Initialized="Window_Initialized">
     <Window.Resources>
         <Style TargetType="{x:Type TextBlock}">
@@ -20,15 +21,13 @@
         <Grid Margin="5,5,5,5">
             <ToolBarTray  Grid.Row="0" IsLocked="True">
                 <ToolBar Padding="3,2">
-                    <Button Content="{x:Static properties:Resources.Inquire}" Click="Inquire_Click" Margin="2,0,0,0"/>
-                    <Button  Content="{x:Static properties:Resources.AdvanceSearch}"  Click="SearchAdvanced_Click" Margin="2,0,0,0"/>
+                    <Button Content="{x:Static properties:Resources.Inquire}" Command="{Binding GenericQueryCommand}" Margin="2,0,0,0"/>
+                    <Button  Content="{x:Static properties:Resources.AdvanceSearch}" Command="{Binding GenericQueryCommand}" Margin="2,0,0,0"/>
                 </ToolBar>
             </ToolBarTray>
             <StackPanel HorizontalAlignment="Right"  Orientation="Horizontal">
-                <Button Click="Button_Click" Padding="2" Height="25" Width="25" Margin="0,1,5,0">
-                    <Rectangle Width="16" Height="16" Fill="{StaticResource DISave}" />
-                </Button>
-                <Button  Command="{Binding ClearListCommand}" Padding="2" Height="25" Width="25" Margin="0,1,5,0" >
+                <Button Content="打开" Command="{Binding SelectDbFileCommand}"   Height="25"   Margin="0,1,5,0"  />
+                <Button  Command="{Binding MsgRecordsClearCommand}" Padding="2" Height="25" Width="25" Margin="0,1,5,0" >
                     <Button.Triggers>
                         <EventTrigger RoutedEvent="Button.Click">
                             <BeginStoryboard>
@@ -45,7 +44,7 @@
                         </Image.RenderTransform>
                     </Image>
                 </Button>
-                <Button Grid.Column="1" Margin="0,1,5,0" HorizontalAlignment="Left" Command="{Binding EditCommand}" Padding="2" Height="25" Width="25" >
+                <Button Grid.Column="1" Margin="0,1,5,0" HorizontalAlignment="Left" Command="{Binding EditConfigCommand}" Padding="2" Height="25" Width="25" >
                     <Button.Triggers>
                         <EventTrigger RoutedEvent="Button.Click">
                             <BeginStoryboard>
