--- a/Engine/ColorVision.Engine/Messages/MessagesListWindow.xaml
+++ b/Engine/ColorVision.Engine/Messages/MessagesListWindow.xaml
@@ -21,7 +21,7 @@
         <Grid Margin="5,5,5,5">
             <ToolBarTray  Grid.Row="0" IsLocked="True">
                 <ToolBar Padding="3,2">
-                    <Button Content="{x:Static properties:Resources.Inquire}" Command="{Binding GenericQueryCommand}" Margin="2,0,0,0"/>
+                    <Button Content="{x:Static properties:Resources.Inquire}" Command="{Binding QueryCommand}" Margin="2,0,0,0"/>
                     <Button  Content="{x:Static properties:Resources.AdvanceSearch}" Command="{Binding GenericQueryCommand}" Margin="2,0,0,0"/>
                 </ToolBar>
             </ToolBarTray>
